// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable renders column pivot header without offset when rollup is disabled 1`] = `
<div
  className="messages-container container"
>
  <table
    className="table table-condensed messages"
  >
    <thead>
      <tr>
        <th
          className="leftAligned"
          colSpan={1}
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              TCP
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
        <th
          className="leftAligned"
          colSpan={1}
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              UDP
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
      </tr>
      <tr>
        <th
          className="leftAligned"
          colSpan={1}
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              <span
                className="field-element  "
              >
                count()
              </span>
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
        <th
          className="leftAligned"
          colSpan={1}
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              <span
                className="field-element  "
              >
                count()
              </span>
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      className="message-group"
    >
      <tr
        className="fields-row"
      >
        <td>
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              239
              <span
                className="caret"
              />
            </span>
          </span>
        </td>
        <td>
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              226
              <span
                className="caret"
              />
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable should render with empty data 1`] = `
<div
  className="messages-container container"
>
  <table
    className="table table-condensed messages"
  >
    <thead>
      <tr />
    </thead>
  </table>
</div>
`;

exports[`DataTable should render with filled data with rollup 1`] = `
<div
  className="messages-container container"
>
  <table
    className="table table-condensed messages"
  >
    <thead>
      <tr>
        <th
          className="leftAligned"
          colSpan={2}
        />
        <th
          className="leftAligned"
          colSpan={1}
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              hulud.net
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
      </tr>
      <tr>
        <th
          className="leftAligned"
          colSpan={
            Array [
              "timestamp",
            ]
          }
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              <span
                className="field-element  "
              >
                timestamp
              </span>
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
        <th
          className="leftAligned"
          colSpan={
            Array [
              "count()",
            ]
          }
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              <span
                className="field-element  "
              >
                count()
              </span>
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
        <th
          className="leftAligned"
          colSpan={1}
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              <span
                className="field-element  "
              >
                count()
              </span>
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      className="message-group"
    >
      <tr
        className="fields-row"
      >
        <td>
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              2018-10-04T09:43:50.000Z
              <span
                className="caret"
              />
            </span>
          </span>
        </td>
        <td>
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              408
              <span
                className="caret"
              />
            </span>
          </span>
        </td>
        <td>
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              408
              <span
                className="caret"
              />
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable should render with filled data without rollup 1`] = `
<div
  className="messages-container container"
>
  <table
    className="table table-condensed messages"
  >
    <thead>
      <tr>
        <th
          className="leftAligned"
          colSpan={1}
        />
        <th
          className="leftAligned"
          colSpan={1}
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              hulud.net
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
      </tr>
      <tr>
        <th
          className="leftAligned"
          colSpan={
            Array [
              "timestamp",
            ]
          }
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              <span
                className="field-element  "
              >
                timestamp
              </span>
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
        <th
          className="leftAligned"
          colSpan={1}
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              <span
                className="field-element  "
              >
                count()
              </span>
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      className="message-group"
    >
      <tr
        className="fields-row"
      >
        <td>
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              2018-10-04T09:43:50.000Z
              <span
                className="caret"
              />
            </span>
          </span>
        </td>
        <td>
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              408
              <span
                className="caret"
              />
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
